# SvgEditor

./: .gitignore  Cargo.toml  README.md  build.rs  icon.rgba  svgeditor.desktop
.github/workflows/: ci.yml  release.yml
src/: app.rs  canvas.rs  config.rs  fonts.rs  history.rs  i18n.rs  main.rs  panels.rs  path_editor.rs  preview_cache.rs  svg_doc.rs
tests/: svg_parse_test.rs
