[package]
name = "svg_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.34", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
] }
egui = { version = "0.34", default-features = false, features = [
    "default_fonts",
] }
resvg = { version = "0.45.1", default-features = false, features = ["text", "system-fonts"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rfd = "0.17.2"
env_logger = { version = "0.11.8", default-features = false }
log = "0.4.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 2
panic = "abort"

[profile.dev.package."*"]
opt-level = 2
